--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@
                         <div class="object__block-info__list-img">
                             <img src="src/img/objects/lujniki-1.png" alt="«Лужники»" class="object__block-info__item-img">
                             <img src="src/img/objects/lujniki-2.png" alt="«Лужники»" class="object__block-info__item-img">
+                            <img src="src/img/objects/lujniki-3.png" alt="«Лужники»" class="object__block-info__item-img">
                         </div>
                         <h4 class="object__block-info__item-title">Реконструкция стадиона «Лужники» <br>в 2017 году.</h4>
                         <p class="object__block-info__item-text">Последняя реконструкция стадиона, проводимая в рамках подготовки к Чемпионату Мира по футболу в 2018 году.</p>
